# nRF5340-Real-Time-Orientation-Tracking-with-a-Round-LCD-Interface

./: CMakeLists.txt  README.md  app.overlay  prj.conf
src/: gc9a01.c  main.c
ui/: battery_50_percentage.c  bluetooth_connected.c  cairdio_and_rice_logo.c  cairdio_logo.c
